// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> AltinnIconButton--- Snapshot +++ Should match snapshot with all params specified 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root AltinnIconButton-dottedBtn-1 MuiButton-contained"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <i
      className="ai ai-write AltinnIconButton-dottedBtnIcon-2"
    />
    mock btn text
  </span>
</button>
`;

exports[`>>> AltinnIconButton--- Snapshot +++ Should match snapshot with the least amount of params 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root AltinnIconButton-dottedBtn-1 MuiButton-contained"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <i
      className="ai ai-write AltinnIconButton-dottedBtnIcon-2"
    />
    mock btn text
  </span>
</button>
`;
